--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -13,6 +13,7 @@
         android:layout_height="111dp"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
+        android:contentDescription="@string/avatar"
          />
 
     <ProgressBar
