--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -4,7 +4,7 @@
     <group android:menuCategory="container">
         <item
             android:id="@+id/menu1"
-            android:icon="@drawable/baseline_announcement_24"
+            android:icon="@drawable/star"
             android:title="@string/menu_1"
             app:showAsAction="ifRoom" />
         <item
