--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -7,6 +7,19 @@
     android:orientation="vertical"
     tools:context=".ui.detail.DetailUserActivity">
 
+    <ToggleButton
+        android:id="@+id/toggleButton_fav"
+        android:layout_width="73dp"
+        android:layout_height="61dp"
+        android:layout_gravity="end"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/fav_toogle"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:textOff=""
+        android:textOn="" />
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="123dp"
@@ -64,18 +77,20 @@
             android:layout_gravity="end"
             android:textStyle="bold" />
 
-    </LinearLayout>
-            <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabs"
-        android:layout_marginTop="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:tabTextColor="@color/black" />
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+
+    </LinearLayout>
+<!--            <com.google.android.material.tabs.TabLayout-->
+<!--        android:id="@+id/tabs"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@color/white"-->
+<!--        app:tabTextColor="@color/black" />-->
+
+<!--    <androidx.viewpager2.widget.ViewPager2-->
+<!--        android:id="@+id/view_pager"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
 
 </LinearLayout>
