--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:menuCategory="container">
         <item
-            android:id="@+id/menu1"
-            android:icon="@drawable/baseline_announcement_24"
-            android:title="@string/menu_1"
-            app:showAsAction="ifRoom" />
+            android:id="@+id/menufavorite"
+            android:icon="@drawable/baseline_star_25"
+            app:showAsAction="always"/>
         <item
-            android:id="@+id/menu2"
-            android:title="@string/menu_2"
-            app:showAsAction="never" />
+            android:id="@+id/mode"
+            android:title="Settings"
+            android:icon="@drawable/baseline_settings_24"
+            app:showAsAction="always"/>
     </group>
 </menu>
